--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: python
 sudo: required
 
 services:
@@ -8,14 +7,14 @@ env:
   DOCKER_COMPOSE_VERSION: 1.21.1
 
 before_install:
-  # - sudo rm /user/local/bin/docker-compose
+  - sudo rm /user/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
 
 before_script:
   - docker-compose -f docker-compose-dev.yml run users python manage.py test
-  - docker-compose -f docker-compose-dev.yml run users flake8 project
+  # - docker-compose -f docker-compose-dev.yml run users flake8 project
 
 after_script:
   - docker-compose -f docker-compose-dev.yml down
