--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ before_script:
 script:  
   - docker-compose -f docker-compose-dev.yml run users python manage.py test
   - docker-compose -f docker-compose-dev.yml run users flake8 project
+  - docker-compose -f docker-compose-dev.yml run roles python manage.py test
+  - docker-compose -f docker-compose-dev.yml run roles flake8 project
+  - docker-compose -f docker-compose-dev.yml run components python manage.py test
+  - docker-compose -f docker-compose-dev.yml run components flake8 project
 
 after_script:
   - docker-compose -f docker-compose-dev.yml down
